Добавил авторизацию с помощью JWT токена

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ FLASK_APP=run.py
 FLASK_ENV=development
 DATABASE_URL=postgresql://postgres:rootroot@localhost/flower_shop
 SECRET_KEY=a3d2b1e49c12356f8d0ab57ce25dc7e8
+JWT_SECRET_KEY=b6f2e1c497a146d3c0af26d5da93ce6f
